<resources>
    <string name="app_name">TooGoodToWaste</string>
    <string name="loginButton">Login</string>
    <string name="registerButton">Register</string>
    <string name="restaurante">Restaurant</string>
    <string name="cliente">Client</string>
    <string name="register_information_string">What are you planning to do?</string>
    <string name="register_restaurant_information">Please Insert your informations</string>
    <string name="email_tooltip">Email</string>
    <string name="password_tooltip">Password</string>
    <string name="restaurant_name_tooltip">Restaurant Name</string>
    <string name="location_tooltip">Location</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="register">Register</string>
    <string name="submit">Submit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nome_de_produto">Product Name</string>
    <string name="unidade_utilizada">Unit used</string>
    <string name="quantidade">Quantity</string>
    <string name="data_de_validade">Shelf Life</string>
    <string name="adicionar_produto">Add Product</string>
    <string name="confirmar">Confirm</string>
    <string name="msg_token_fmt">token FCM</string>
    <string name="default_notification_channel_id">1</string>
    <string name="location_permission_denied">Location permission denied</string>
    <string name="service_not_available">Service unavailable</string>
    <string name="invalid_lat_long_used">Invalid coordinates supllied</string>
    <string name="no_address_found">No location provided</string>
    <string name="criar_cabaz">Make Offer</string>
    <string name="ver_cabaz">See offer</string>
    <string name="content_description_media">Offer Banner</string>
    <string name="new_product">New Product</string>
    <string name="confirm_offer">Confirm Offer</string>
    <string name="price_of_offer">Price of Offer:</string>
    <string name="make_offer">Make Offer</string>
    <string name="see_offers">See Offers</string>
    <string name="cumprido">FULFILLED</string>
    <string name="shelf_life">Shelf Life</string>
    <string name="price">Price</string>
    <string name="requested">REQUESTED</string>
    <string name="see_products">See Products</string>
    <string name="confirm_key">Confirm Key</string>
    <string name="shelf_life_presentaion">Shelf Life:</string>
    <string name="price_apresetnation">Price:</string>
    <string name="fulfilled">Fulfilled</string>
    <string name="requested_apresentation">Requested</string>
    <string name="price_ap2">Price</string>
    <string name="shelf_life_2">Shelf Life</string>
    <string name="reserve">Reserve</string>
    <string name="unit">Unit</string>
    <string name="name">Name</string>
    <string name="confirm">Confirm</string>
    <string name="email_2">Email</string>
    <string name="user_2">User:</string>
    <string-array name="product_units_array">
        <item>Kg</item>
        <item>g</item>
        <item>l</item>
        <item>ml</item>
    </string-array>
</resources>